--- a/netflix-clone/index.html
+++ b/netflix-clone/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="KufYTjDbgYG4vK6ZJz73lgkmUe6GAS2ugpjjvk35cIw" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/netflix_favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
